Added ALU functionality to timer

--- a/Game/stateintegration/work/vivado/stateintegration/stateintegration.runs/impl_1/usage_statistics_webtalk.html
+++ b/Game/stateintegration/work/vivado/stateintegration/stateintegration.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>3064766</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 16 15:07:16 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 16 19:29:22 2022</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>a0b8dd30ef4b44abb5dfa90883bccdd4</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>3f4499777e534055a1833489c4f0c43d</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a5042135253f55b4bd368501bc0be0c7</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>a5042135253f55b4bd368501bc0be0c7</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-4600M CPU @ 2.90GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2893 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2592 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -71,17 +71,17 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=35</TD>
-    <TD>fdre=330</TD>
-    <TD>fdse=68</TD>
+    <TD>carry4=31</TD>
+    <TD>fdre=294</TD>
+    <TD>fdse=65</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=19</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=17</TD>
-    <TD>lut2=37</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=30</TD>
-    <TD>lut4=103</TD>
-    <TD>lut5=95</TD>
-    <TD>lut6=97</TD>
+    <TD>lut1=14</TD>
+    <TD>lut2=18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=25</TD>
+    <TD>lut4=94</TD>
+    <TD>lut5=65</TD>
+    <TD>lut6=108</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
     <TD>vcc=20</TD>
 </TR>   </TABLE>
@@ -90,17 +90,17 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=35</TD>
-    <TD>fdre=330</TD>
-    <TD>fdse=68</TD>
+    <TD>carry4=31</TD>
+    <TD>fdre=294</TD>
+    <TD>fdse=65</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=19</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=17</TD>
-    <TD>lut2=37</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=30</TD>
-    <TD>lut4=103</TD>
-    <TD>lut5=95</TD>
-    <TD>lut6=97</TD>
+    <TD>lut1=14</TD>
+    <TD>lut2=18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=25</TD>
+    <TD>lut4=94</TD>
+    <TD>lut5=65</TD>
+    <TD>lut6=108</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
     <TD>vcc=20</TD>
 </TR>   </TABLE>
@@ -177,7 +177,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>timing-18=50</TD>
+<TR ALIGN='LEFT'>    <TD>timing-18=38</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -211,7 +211,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.002910</TD>
+    <TD>clocks=0.002110</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -220,20 +220,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071731</TD>
+    <TD>devstatic=0.071719</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tftg256-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.015545</TD>
+    <TD>dynamic=0.009764</TD>
     <TD>effective_thetaja=4.85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.009242</TD>
+    <TD>i/o=0.003933</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.001138</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.001427</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -244,12 +244,12 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.087276</TD>
+    <TD>on-chip_power=0.081483</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=ftg256</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=2.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.000000</TD>
     <TD>pct_inputs_defined=14</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -258,7 +258,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.002255</TD>
+    <TD>signals=0.002295</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -275,21 +275,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000336</TD>
+    <TD>vccaux_dynamic_current=0.000142</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012617</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012953</TD>
+    <TD>vccaux_static_current=0.012616</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012757</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.006371</TD>
-    <TD>vccint_static_current=0.009559</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.015930</TD>
+    <TD>vccint_dynamic_current=0.005900</TD>
+    <TD>vccint_static_current=0.009549</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.015449</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -311,9 +311,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.002597</TD>
+    <TD>vcco33_dynamic_current=0.001094</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.003597</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002094</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2020.2</TD>
 </TR>   </TABLE>
@@ -428,25 +428,25 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=35</TD>
+    <TD>carry4_used=31</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=338</TD>
+    <TD>fdre_used=306</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
-    <TD>fdse_used=68</TD>
+    <TD>fdse_used=65</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=7</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=17</TD>
+    <TD>lut1_used=14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=37</TD>
+    <TD>lut2_used=18</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=30</TD>
+    <TD>lut3_used=25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=103</TD>
+    <TD>lut4_used=94</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=95</TD>
+    <TD>lut5_used=65</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=97</TD>
+    <TD>lut6_used=108</TD>
     <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=53</TD>
 </TR>   </TABLE>
@@ -464,34 +464,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=326</TD>
-    <TD>lut_as_logic_util_percentage=1.57</TD>
+    <TD>lut_as_logic_used=275</TD>
+    <TD>lut_as_logic_util_percentage=1.32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=406</TD>
-    <TD>register_as_flip_flop_util_percentage=0.98</TD>
+    <TD>register_as_flip_flop_used=371</TD>
+    <TD>register_as_flip_flop_util_percentage=0.89</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=326</TD>
-    <TD>slice_luts_util_percentage=1.57</TD>
+    <TD>slice_luts_used=275</TD>
+    <TD>slice_luts_util_percentage=1.32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=406</TD>
-    <TD>slice_registers_util_percentage=0.98</TD>
+    <TD>slice_registers_used=371</TD>
+    <TD>slice_registers_util_percentage=0.89</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=326</TD>
-    <TD>lut_as_logic_util_percentage=1.57</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=275</TD>
+    <TD>lut_as_logic_util_percentage=1.32</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -499,35 +499,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=82</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=82</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=98</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=98</TD>
-    <TD>register_driven_from_outside_the_slice_used=180</TD>
-    <TD>register_driven_from_within_the_slice_fixed=180</TD>
-    <TD>register_driven_from_within_the_slice_used=226</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=73</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=73</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=105</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=105</TD>
+    <TD>register_driven_from_outside_the_slice_used=178</TD>
+    <TD>register_driven_from_within_the_slice_fixed=178</TD>
+    <TD>register_driven_from_within_the_slice_used=193</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=406</TD>
-    <TD>slice_registers_util_percentage=0.98</TD>
-    <TD>slice_used=147</TD>
-    <TD>slice_util_percentage=1.80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=371</TD>
+    <TD>slice_registers_util_percentage=0.89</TD>
+    <TD>slice_used=122</TD>
+    <TD>slice_util_percentage=1.50</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=96</TD>
+    <TD>slicel_used=79</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=51</TD>
+    <TD>slicem_used=43</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=17</TD>
-    <TD>unique_control_sets_util_percentage=0.21</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.21</TD>
-    <TD>using_o5_and_o6_used=53</TD>
-    <TD>using_o5_output_only_fixed=53</TD>
-    <TD>using_o5_output_only_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=273</TD>
+    <TD>unique_control_sets_used=14</TD>
+    <TD>unique_control_sets_util_percentage=0.17</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.17</TD>
+    <TD>using_o5_and_o6_used=49</TD>
+    <TD>using_o5_output_only_fixed=49</TD>
+    <TD>using_o5_output_only_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=1</TD>
+    <TD>using_o6_output_only_used=225</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -619,10 +619,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:01:03s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:01:04s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=127.844MB</TD>
-    <TD>memory_peak=1128.188MB</TD>
+    <TD>memory_gain=35.812MB</TD>
+    <TD>memory_peak=1037.137MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
